--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <main class="container">
             <section class="banner">
                 <div class="banner__imagem"></div>
-                <h2 class="banner__titulo">Reaproveite melhor os alimentos e melhor a sua saúde!</h2>
+                <h2 class="banner__titulo">Melhore a sua saúde!</h2>
             </section>
             <section class="sobre">
                 <h3 class="sobre__titulo">Receitas para economisar e ganhar saúde</h3>
